@@ -82,7 +82,9 @@ llama3.1 8b  AI的应用，大模型本地部署使用，GPT 4o，辅助代码�
 
 加入布隆过滤器。查询请求进来，根据携带的例如商品编号，先经过布隆过滤器过滤，包含对应编号则予以放行，进入查redis环节。没有则将其判为无效请求，对请求进行拦截，降低数据库压力。
 
+线上环境排查jvm     命令 top jps  		jmap -histo pid    jmap -dump:format=b,file=heapdump.hprof <pid>      jstack <pid>
 
+合理配置jvm的新生代与老年代比例，分析gc日志，优化调整。长对象，大对象直接放老年代等等
 
 自己有三台小型个人服务器，测试数据库的主从复制一注二从，或数据库的集群分片，三主节点。测试redis与mysql。
 
@@ -109,6 +111,10 @@ redis分片集群，并根据数据增长自动获取新的分片
 
 
 协调：与其他直播平台合作，提供商品售卖链接，api调用，保证用户信息与订单与支付信息的一致性。保证促销活动时的稳定性。
+
+
+
+业务逻辑功能的拆分，逻辑思维，复杂问题清晰化，复杂规划能力
 
 
 
@@ -175,6 +181,14 @@ redis分片集群，并根据数据增长自动获取新的分片
 
 优化SQL语句，优化架构设计，业务分离。业务逻辑移动到ssm的service，减轻数据库压力。
 
+将mysql中编写的逻辑移动到service，将重复的进行提取，公共化，减少子查询，
+
+例如整合数据量较少或者有关联性的一些字段，例如id拼接业务类型+请求类型，减少返回的对象大小
+
+例如不合理的将年月日拆分为日单独一列，就为了生成统计表等返回数据使用，
+
+解析数据的逻辑应该在java而不是在mysql
+
 mysql对于逻辑处理是十分脆弱的需要保证数据的洁净，一旦有错误的不完整的数据，空值，就容易错上加错。且耗时长，其余的会发生阻塞。
 
 例如计算平均值，求和，一些简单的加减乘除以及判断。
@@ -196,6 +210,10 @@ excel表格读取与生成
 数据对账，格式转换，日期格式，金钱格式，编码格式等
 
 数据统一化，例如数据单位米，千米，统一数值范围，评分系统等百分制，十分制转换，
+
+
+
+解决业务调用混乱，调用链交错复杂，等问题
 
 
 
@@ -1759,19 +1777,565 @@ spring:
 
 
 
-# P2--GitHub开源项目  企业级低代码平台JeecgBoot
+# 题目大纲：
+
+Redis 实现分布式锁， redission  使用了lua脚本 保证 hincrby 和 pexpire的原子性 是可重入锁
+
+​	redis缓存 token 验证码，计数器，全局唯一ID，热点排行榜，限流，购物车，粉丝关注列表
+
+缓存穿透：查询不存在的数据---缓存空结果，布隆过滤器
+
+缓存击穿：大量请求集中到热点数据突然过期，缓存预热并不过期，或者使用全局锁保护数据库
+
+缓存雪崩，大量数据缓存过期或redis宕机，redis Cluster集群。限流熔断降级
+
+内存淘汰策略。
+
+String最大512MB 
+
+MySQL和Redis的一致性 延时双删
+
+redis集群最多部署多少节点 16384个槽位，Gossip通信协议，官方建议1000个左右
+
+Spring的Bean 不是线程安全的，但是使用都是无状态使用。想改就改成多例的。
+
+Spring对于事务的管理，注解，事务的失效，传播行为，只会对public生效。
+
+Bean的生命周期，三级缓存
+
+RabbitMQ组件 TCP长连接 Channel Exchange Queue RoutingKey
+
+生产者向交换机Exchange----Confirm确认模式
+
+交换机成功将消息投递到队列 Return 返回模式
+
+消息在队列中存储的可靠性 构建器模式
+
+消费者可以成功从队列中获取消息：手动确认消息 basicAck  basicNack     basicReject
+
+消息幂等性 全局唯一ID，redis保证id的唯一性
+
+死信队列DLX  死信交换机，避免消息一致无法被成功消费。
+
+死信的产生，TTL 消息被拒绝或消息未确认，或者消息队列已满。
+
+延迟队列可以使用TTL + DLX实现，也有插件rabbitmq-delayed-message-exchange
+
+镜像队列部署集群保证MQ高可用，
+
+消息挤压：预防：
+			流量预估：预计每秒产生的消息数
+			压力测试：压测消费能力的最大值
+			应急预案：
+		应急处理：
+			生产端：限流：gateway
+			生产端：熔断：降级
+			消费端：削峰：缓存消息或者延时
+			消费端：Kubernates自动扩容，自动增加实例数量
+		事后总结并优化：
+			优化业务流程，业务逻辑，优化数据库操作效率等方法提高消费者的消费效率。
+			优化IO逻辑，使用异步处理等。网络IO的开销往往比磁盘IO开销大。
+			体现个人观点与想法。
+		安全性：
+			避免因业务堆积导致消息丢失。
+			合理设置TTL时间并指定死信队列DLX，之后再额外处理死信
+			编写程序例如定时任务定时检测消息的发送与消费情况，补发或者其他的逻辑。
+
+线程池ThreadPoolExecutor 核心参数，
+
+MyBatis分页，一级缓存sqlSession 二级缓存mapper
+
+hashMap 数组链表红黑树 扩容 ConcurrentHashMap的分段锁逻辑
+
+	多线程put 导致死循环：
+		本质：扩容，重新哈希，链表节点指向自己
+	
+	多线程put 导致元素丢失：
+		本质：hash计算k，插入v多线程下不是原子的，竟态，hash冲突，发生覆盖而不是加到链表
+	
+	多线程同时 put 和 get 导致 get到 null：
+		本质：一个线程触发扩容，开始重新哈希计算，另一个线程同时获取，此时找到了key，value却是指向了新的，原有的没了
+	
+	线程安全包装： Collections.synchronizedMap(new HashMap<Object, Object>(16))
+		或者使用Hashtable，ConcurrentHashMap
+
+ThreadLocal      ThreadLocalMap对象	 Entry[] table
+
+	ThreadLocal的实现原理是把 ThreadLocal的this引用作为key，用户指定的值作为value，set到线程的 threadlocals 属性字段中。
+	而 threadlocals字段是 ThreadLocalMap，它的底层存储的 Entry 的 key 是 弱引用 extendsWeakReference<ThreadLocal<?>>
+	
+	如果线程正常结束，线程引用Entry[] 正常清除，jvm的GC会进行回收，不会引发问题。
+	如果线程没有回收和销毁，例如线程池中的核心线程，使用后会归还。
+		此时被引用的Entry[] 不会销毁，数组中保存的键值对不会被释放。随着累计，内存占用越来越多，导致内存溢出泄露。
+	核心原因是线程依旧存在（线程池），即使Entry的key是强引用了，但是原来的线程依旧引用Entry[]数组，其内存得不到释放。
+	
+	处理方法：
+		当调用set get 方法时，ThreadLocal会检测key为空的所有Entry，将其释放
+	处理方法：
+		当该线程的任务结束后，使用try -- finally语句块，手动清除Entry[]
+			threadLocal.set();      // 只要用了threadLocal的set，结束了就一定要remove() 就像IO流必须手动关闭
+			threadLocal.remove();
+		就可以确保不会内存泄露
+
+Thread：线程相关 sleep() 和 wait() 的区别
+
+Thread：线程相关：多个线程如何保证按照顺序执行？？？按顺序了序列化了要多线程干嘛
+	解决方法：
+		使用join() 方法
+
+创建单一化线程池 private static ExecutorService execurotService = Execurots.newSingleThreadExecutor()
+			实际上就约等于是 private static final ThreadPoolExecutor threadPoolExecutor = 
+					new ThreadPoolExecutor(1, 1, 0L, TimeUint.MILLSECONDS, newLinkedBlockingQueue<Runnable>(1024))
+			然后依次提交t1任务、t2任务、t3任务   核心线程数为1，队列是先进先出，就是依次执行任务。
+
+倒数计时器 CountDownLatch
+
+Thread：线程池相关 execute() 和 submit() 的区别
+	execute() 只能提交Runnable，无返回值。subbmit可以提交 Runnable无返回值 和 Callable 返回值Future
+	execute() 方法是 Executor接口中定义的，submit() 方法是ExecutorService接口中定义的，而ThreadPoolExecutor是ExecutorService的实现类
+	execute() 方法执行遇到异常会直接抛出，submit() 执行任务遇到异常时不会直接抛出，只有在调用Future.get() 方法获取返回值时抛出异常。
+
+JVM：继承关系：双钱委派机制/模型
+
+		加载一个类，自己先不加载，向上交由双亲加载。
+		双亲加载不了，向下委派去自己加载。
+			
+		自底向上检测--是否加载成功
+		自顶向下尝试--加载
+			安全性：保证Java的核心类库安全，不被修改
+			例如java.lang.String。
+			先向上委派到系统类加载器就成功加载并返回了。不需要在向下
+				如果是自己写的需要逐级向下等到AppClassLoader才会加载，是加载不到的。
+	
+			并且Java处于安全考虑，自己写的代码，类。是不可以使用java核心类库的包名的。避免重名和混淆。
+		
+		避免重复加载
+	
+		保证类的唯一性
+
+JVM OOM 溢出的是堆内存，是对象没法被清理堆积过多导致。
+
+	栈内存是每个线程执行时自行分配，存有方法调用栈，局部变量等。如果递归次数过多，调用链过长。
+		可能导致栈内存使用过多进而导致 栈内存溢出错误   StackOverflowError    ----jstack
+
+内存预估：
+		以一台4核8g内存服务器为例，单机最大并发请求在300-400之间。
+		如果请求需要2000台机器同时处理，一个订单容量1KB。
+		一台机器就是 300*1KB*20（其他相关操作）*10（其他相关对象） 的内存开销，
+			这些是在jvm的新生代中创建，朝生夕死，一秒后使用完成，成功响应，60MB的对象进入垃圾回收 90%都会销毁。
+		（实际远远要更加复杂，可能有众多性能不同的服务器，服务器之间需要进行调度，服务器上还同时运行有很多其他的微服务程序）
+		（订单包含的信息以及用户数据也不会相同，可能有的很大有的很小。也有很多与订单生成的相关业务需要同时执行。生成订单也需要调用其他的微服务）
+
+	高并发对于jvm的影响：
+		堆：大量的请求对象，大量的与数据库交互的对象以及接收结果数据的封装对象，大量需要返回前端的dto对象和json。
+		栈：大量线程并发执行，
+	
+	内存分配：
+		4核8g的机器，分给一半给jvm，其他留给操作系统以及其他中间件。
+		堆 3g，新生代1.5g，老年代1.5g。（需要调整的地方之一：新生代与老年代的比例） ------ new User()
+		栈估算：一个栈1mb，处理300个请求预估总线程500，那么就是占用500MB
+		元空间（永久代）（方法区）默认512MB---------User.class
+	
+	JVM配置参数：
+		-Xms3072M -Xmx3072M -Xmn1526M -Xss1M
+		-XX:MetaspaceSize=512M -XX:MaxMetaspaceSize=512M
+		-XX:+PrintGCDetails
+		-XX:+PrintGCDateStamps
+		-Xloggc:d:/gc.log
+		-XX:+HeapDumpOnOutOfMemoryError
+		-XX:HeapDumpPath=d:/heap.hprof
+		打印gc日志，oom时的heap快照
+	
+	内存占用动态推算
+		新生代分为 Eden区 80%，S0区（FromSurvivor）10%，S1区(To Survivor)10%
+		1.5g的新生代，60m每秒生成，那么25秒新生代Eden占满，触发MinorGC （ParNew 是很快的，一般都是毫秒级）
+		一般情况下，一次可以回收掉90%的新生代（Eden + S0）对象，那么新生代还存活150MB，也就是S0 S1大致需要的空间。
+		-XX:SurvivorRatio  默认是8 就是 8：1：1  那么就是1.2g：150M：150M
+		有可能就有的放不下进入了老年代。如果老年代持续堆积，就会触发FullGC，是十分消耗性能的，jvm会暂停
+		所以新生代需要以Eden区为基准进行计算
+	
+	优化分配老年代与新生代的比例：
+		新生代较小，发生一次MinorGC后，Survivor不足或者触发动态年龄判断，对象进入老年代。（Survivor空间不足）
+		将新生代调整为2g，老年代1g，此时Eden：1.6g，S0 200m，S1 200m （依旧保持默认的 8：1：1）
+		参数
+		-Xms3072M -Xmx3072M -Xmn2048M -Xss1M
+	
+	对于 @Service @Controller 这类的单例Bean，SpringIoC容器没有关闭，他们是一直存活的，不会被回收的
+		可能不多就几十兆，他们应该尽快被放入老年代
+		修改 -XX:MaxTenuringThreshold=5  默认是 15.就是对象在S0区和S1区之间不断复制整理，切一次年龄增长一岁，到达15岁进入老年代。
+		改为5岁就加入老年代。也就是新生代5次垃圾回收都不能回收该对象，那么就放入老年代。（默认是15次）
+	
+	对于项目中的大对象，例如数据库字典数据，配置数据，初始化数据。
+		这些内容需要直接进入老年代，
+		修改 
+		-XX:PretenureSizeThreshold=1M  阈值，对象大于1M，直接放入老年代
+	
+	选择合适的GC垃圾回收器
+		修改 
+		-XX:+UseParNewGC  多线程的新生代的垃圾回收器  -XX:+UseConcMarkSweepGC   CMS垃圾回收器适合于内存比较小的服务器
+		G1垃圾收集器适合于内存比较大的情况
+	
+	高峰期时间与容量的计算
+		按照每隔几分钟MinorGC，200mb被放到S1，五岁进入老年代
+		估算大只要一小时，才会有1gb进入老年代触发FullGC。
+		如果不是高峰期，可能要几个小时才会触发老年代的FullGC（在高峰来之前手动GC清理老年代）
+		增加配置，老年代达到75%就触发FullGC。触发FullGC后，需要内存整理，触发此处为0就是每次都整理。
+
+----------------------------------------------------------------------------------
+	最终JVM配置：
+	
+		-Xms3072M -Xmx3072M -Xmn1526M -Xss1M
+		-XX:+UseCompressedClassPointers
+		-XX:MetaspaceSize=512M -XX:MaxMetaspaceSize=512M
+		-XX:+PrintGCDetails
+		-XX:+PrintGCDateStamps
+		-Xloggc:d:/gc.log
+		-XX:+HeapDumpOnOutOfMemoryError
+		-XX:HeapDumpPath=d:/heap.hprof
+		-XX:SurvivorRatio-8
+		-XX:MaxTenuringThreshold=5
+		-XX:PretenureSizeThreshold=1M
+		-XX:+UseParNewGC -XX:+UseConcMarkSweepGC
+		-XX:CMSInitiatingOccupancyFraction=75
+		-XX:+UseCMSCompactAtFullCollection
+		-XX:CMSFullGCsBeforeCompaction=0
 
 
+----------------------------------------------------------------------------------
+
+优化思路总结：
+	尽可能让对象在新生代里面分配和回收，避免对象频繁进入老年代频繁FullGC
+		也就是要分清楚，哪些对象是要快用快收的。
+	给系统充足的内存空间，避免新生代频繁的垃圾回收，调整新生代与老年代的比例
+	指定合适的垃圾收集器
+
+MySQL：存储引擎
+	select version();
+	show engines;
+
+MySQL的InnoDB引擎是如何工作的，架构如何（重点）
+	执行器发送给InnoDB引擎去执行，（此前有语法树，执行优化等）
+
+	首先将需要更新的记录从磁盘文件中加载到缓冲池（内存缓冲区） BufferPool    --------- where 关键字
+		这个BufferPool，增删改时候是加载 数据页，在查询时就是加载对应的 索引页。
+	
+	然后将旧的值（原本的数据）写入到 undo log 便于回滚。  ------  rollback
+	
+	然后根据执行器发送的sql语句更新内存中的数据。  -----  执行DML sql 增删改
+	
+	然后写 redo 日志到缓冲池 redo log buffer（内存缓冲区）。    ------ 记录了修改之后的数据
+	
+	准备提交事务，从缓冲池将 redo 日志写入磁盘   -------   redo log 日志可以用来数据库宕机恢复，减少数据的损失
+	准备提交事务，执行器将 binlog 写入磁盘   ------ 主从复制  记录了数据的变化
+	
+	写入binlog文件与位置   ----- 传到IO供从库监听
+	写入commit标记。事务提交完成。   -------  commit
+	
+	InnoDB存储引擎的IO线程将 缓冲池 中修改好的数据写入磁盘   ----- 真正更改磁盘上的文件
+
+MySQL：优化数据库性能---全局性
+	服务器硬件，cpu，内存，磁盘的IO性能，交互的网络IO性能。
+
+	服务器的操作系统linux，Linux的配置参数可以进行优化以压榨服务器性能，例如打开文件数等
+	
+	数据库存储引擎的选择：InnoDB、MyISAM（归档）
+	
+	MySQL数据库本身的配置参数，my.cnf配置文件。例如缓冲区大小，连接数等
+	
+	业务开发中：
+		表的结构设计要合理，
+		合理的添加索引
+	
+	高并发下：
+		读写分离（主从复制）
+		分库分表（表结构表关系，数据的增长）
+		分区（集群 MySQL NDB Cluster）
+		多级缓存（前端CDN分发，redis，数据库缓存）
+		引入其他的搜索引擎，Elasticsearch （ELK） MongoDB 对文字类的进行模糊查询，条件查询----维护专用的同步的查询表
+
+MySQL：如何定位比较慢的查询
+	来源：业务驱动：其他人员或者用户的反馈，某个功能使用很慢。一般是线上找到的，会比较被动，尽量避免。
+
+	测试驱动，通过测试人员的反馈，了解到哪些功能比较慢
+	
+	系统跟踪监控例如 Prometheus  SkyWalking
+	
+	慢查询日志，开启MySQL的慢查询日志监控并即时优化。
+		show variables like '%quer%'      找到配置变量
+		
+		show_query_log = ON					开启慢查询日志
+		show_query_log_file					指定日志输出位置
+		long_query_time = 2					限时2秒，认定为慢查询记录日志
+		log_queries_not_using_indexes = ON		记录没命中索引的语句
+	
+	慢查询日志分析工具：
+		mysqldumpslow --help  查看使用帮助
+		./mysqldumpslow -t 10 -s at /usr/local/mysql-8.0.33/data/localhost-slow.log
+	日志记录如下
+		Count:2 Time=0.01s(0.02s) Lock=0.00s(0s) Rows=3.0(6), root[root]@[192.168.1.2]
+		Count     表示该语句执行的次数
+		TIme()    表示该语句执行的最大时间与总计耗时
+		Lock()    表示所得时间
+		Rows()    表示单次返回的结果与总计返回的结果
+
+	B+Tree的优势，改进的多路平衡查找树
+		节点只存储指针（索引键），数据全部存储在叶子节点。并且所有的叶子节点以双向链表的形式链接。
+		页4kb，指针和索引键都是64位的 8b 那么一个节点可以存(4096-8)/(8+8) = 255
+			就是255个索引键和256个子节点指针（和一个自身地址） 2^8
+			2^24 是16777216 就是所谓的2000w单表，此时索引大小 (1+256 +256*256) *4KB=263172KB=257MB（一个）
+		查找时，根据索引值，按页去磁盘读取索引到内存中。
+	
+		叶子节点是一个顺序增长的双向链表，很方便的定位前后数据，范围查找优势很大。
+			查找树找到范围查找的起点，然后利用链表读取范围，还可以利用磁盘预读的优势。
+	
+	B+ Tree的数据存储
+		指针  键值  指针  键值  指针 .....
+	
+		指针  键值  指针  键值  指针 .....					指针  键值  指针  键值  指针 .....
+	
+		双向链表（数据）
+	
+	总结：
+		B+Tree 中间非叶子节点没有数据只有索引，相同的磁盘页节点越多，数据量一样B+树高度更低，IO更少
+		B+Tree每次查找必须查找到叶子节点，性能稳定
+		B+Tree的范围查询更有优势
+
+MySQL：索引的一些叫法
+	主键索引：
+
+	辅助索引，也叫二级索引  Secondary Index 使用主键之外的字段建立索引。
+		二级索引中的叶子节点只存储了索引字段的值和主键值，不包含完整的表记录。
+		你要是说这表就两个字段当我没说，
+	
+	聚集索引也叫聚簇索引 Clustered Index，非聚集索引，也叫非聚簇索引。
+		主键和数据在一起的索引叫聚集索引，聚簇索引的叶子节点存储了整个表的行数据，
+			主键索引就是一种聚集索引。
+		主键和数据不在一起的索引叫非聚集索引，
+			上述的二级索引，或者MyISAM的索引（没存数据，存的是数据的地址）是非聚集索引
+	
+	回表查询：
+		当通过二级索引查询数据时，InnoDB 会首先在二级索引的 B+Tree 中查找匹配的索引键值，
+		然后通过存储在叶子节点中的主键值回表到聚簇索引（主键索引）中获取完整的行数据。
+	
+	索引覆盖：可以用来优化SQL语句的执行效率
+		查找的字段是添加了索引的字段。用索引的体积（空间）换执行效率（时间）
+		之查找一个字段，该字段在索引上只需要走索引，不需要回表查询。就大大提高了效率。
+	
+	联合索引：
+		对于想要同时查找多个字段，就在多个字段上建立联合索引，
+			联合索引将同时包含这多个字段的数据和主键数据。
+			这样在根据其中某一个字段查找时，就可以直接根据索引找到所有查询所需字段的数据，无需回表。
+		用更大的空间来换执行效率。
+	
+	索引下推：Index Condition PushDown 简称ICP
+		MySQL 5.6新增特性，主要作用是用来减少回表查询的次数，提高查询效率。
+		连接层 ---- Server层 ---- 索引引擎层 ---- 数据层
+		多个查询条件，xxx and xxx 
+			如果有查询条件的字段上有索引，多个字段有联合索引。
+			那么查询条件都会在索引中判断。
+		如果多个查询条件例如三个条件，只有两个有联合索引，
+			那么在联合索引筛选完毕，回表到主键索引拿到全部行数据后，
+			交给Server层对于第三个条件再进行过滤
+		也就是只要有索引就优先走索引去筛选，减少回表要查询的数据
+
+SpringBoot：自动装配原理(流程)
+	@SpringBootApplication
+		springboot程序的main方法注解
+		
+
+	@EnableAutoConfigureation
+		自动装配的核心注解
+	
+	AutoConfigurationImportSelector组件
+		自动装配注解导入的组件，准备夺取文件
+	
+	SpringFactoriesLoader读取
+		META-INF/spring.facroties文件 或者
+		org.springframework.boot.autoconfigure.AuroConfiguration.imports文件（sprinboot3.x之后）
+		中的所有 自动配置类（100多项）
+		-----自动导包的核心，自定义的就手动加入其中
+		这种读取配置文件的思想，是Java开发的SPS思想（单一服务点）
+	
+	条件注解进行过滤
+		举例，在RabbitAutoConfiguration类上有注解 @ConditionalOnClass({RabbitTemplate.class, Channel.class})
+		项目引入了(maven)相关的jar包，引用了相关的类就会进行自动配置。
+		自配置类会自动组装 例如 @Bean public RabbitTemplate rabbitTemplate(){}，然后纳入IoC容器管理。
+		这样我们在代码中就可以直接 @Autowire 注入 RabbitTemplate类来使用了。
+	
+	ImportSlector接口
+		将符合条件的Bean，加入到IoC容器中
+	
+	BeanDefinition
+		在Bean初始化之前，先生成Bean的定义文件，描述文件（包名，类名，属性）
+		此时Bean还没有实例化
+	
+	实例化Bean对象，放入Spring的IoC容器
+		根据BeanDefinition实例化Bean，
+	
+	结论：springboot的左右的自动配置，都在启动类中被扫描并加载。加载的多有自动配置类都在spring.factories
+		但是加载了不一定就生效。需要判断条件是否成立。（项目是否引用了相关的依赖jar包）
+		只要导入了starter，就有对应的启动器。具备了启动器，自动配置就会生效，就配置成功了。
+	
+	优点：只需要管理依赖，加入相应的jar包。Springboot就会自动加载并注入相关的对象，无需手动生成bean对象。
+			配置信息有默认的，也可以手动提供，自定义的。
+			让开发者只需要关注 依赖的引入与管理，参数的配置。无需关注复杂的启动初始化与配置等（例如使用注解或者xml文件去配置bean）。
+
+SpringBoot如何实现异步调用（要理清controller与service的关系，api与业务流程的设计与梳理更加重要）
+	asynchronous call 异步调用
+		一个无需等待被调用函数的返回值，就能让操作继续进行的办法
+	
+	应用场景：
+		对于一些不需要在主流程线程中执行的任务，例如注册时发送欢迎邮件。
+		对于不需要实时等待计算结果的任务，例如记录业务执行日志。
+		利用多核CPU并发执行的任务，例如下单时，同时去获取  用户信息例如住址---商品信息----交易信息用户余额等
+		将这类任务放到另一个线程去执行，避免主线程的阻塞和等待。
+	
+	实现手段：
+		RabbitMQ，发送信息给不同的生产者
+	
+		@EnableAsync（启动类） + @Async（Service方法） + ListenableFuture + ThreadPoolTaskExecutor  线程池方案
+									（Service方法返回值）CompletableFuture + ThreadPoolTaskExecutor
+			然后在Controller中并发调用这些支持异步的service方法，
+			CompletableFuture.allOf().get();  接收结果等待所有异步任务完成，进行业务逻辑处理，并返回前端。
+			默认SpringBoot使用的式SimpleAsyncTaskExecutor，结合之前的线程池知识，我们可以自定义线程池来最大化性能
+				@Bean(name = "taskExecurtor")
+				public Executor taskExecutor(){
+					new ThreadPoolTaskExecutor  (是Spring对于ThreadPoolExecutor的一个封装)
+					配置好线程池参数
+				}
+	
+			其实就是java线程池的Spring形态（ @Autowire注入），原来线程池中任务的编写，调度以及定时，spring都可以相应实现
+		
+		异步任务的编写与提交
+		CompleteableFuture<Void> goodsFuture = Comp[letableFuture.runAsync(() -> {
+			某某service方法调用
+			数据处理
+			日志记录等等
+	
+		}, applicatonTaskExecutor)  // 指定要加入的线程池
+		线程池中的execute submit invokeAll 等方法，对应 runAsync方法
+
+SpringBoot默认是JDK动态代理还是CGLIB动态代理
+	CGLIB动态代理
+
+SpringCloud的注册中心
+	Nacos，Eureka，Zookeeper（Dubbo），Apollo（携程的），Consul
+
+	相似点：提供服务注册和发现功能。支持服务的心跳机制健康检查。支持高可用。
+	
+	不同点：
+		Nacos支持主动对微服务进行状态检测，临时实例采用被动心跳检测，永久实例采用主动检测。
+			临时实例心跳检测如果不健康则会从注册中心中阐述，永久实例（本地内嵌数据库或者链接mysql）不会删除
+			支持服务列表变更时的主动消息推送，服务列表更新会更加及时。
+		Nacos集群支持两种模式，默认是AP模式，当集群中存在非临时实例时，采用CP模式
+			而Eureka只支持AP模式
+		Nacos有注册中心和配置中心
+			而Eureka只有注册中心
+		Nacos具备优秀的后台管理界面，用于服务上下线以及流量管理负载均衡以及配置的编写
+			而Eureka的后台只能查看，需要使用api手动调用完成服务的上下线且不具备负载均衡
+		Nacos由SpringCloudAlibaba开源维护
+			而Eureka已经闭源了
+	
+	注册中心应该是AP还是CP
+		AP，优先保证一致性。微服务框架一般都提供了服务容错和重试功能。减轻注册中心的压力
+		如果采用CP，那么每当有服务实例上线下线，都需要等待注册中心集群中的数据完全一致才算注册或删除成功。
+			如果应用实例频繁上下线，会导致注册中心压力增大，服务注册与发现的效率降低。
 
 
+SpringCloud：ACID、BASE、CAP理论
+	ACID是传统数据库中常用的理念，追求的是数据的强一致性。
+		Atomicity 原子性
+		Consistency 一致性
+		Isolation 隔离性
+		Durability 持久性
 
+	BASE理论是在分布式环境下，牺牲强一致性来换取高可用性的策略。
+		Basically Available 基本可用，
+			部分系统故障时，允许损失部分可用性
+		Soft State 软状态：
+			允许系统在不同节点的数据副本之间进行数据同步的过程允许延时。允许中间状态（主从复制的延迟）
+		Eventually Consistent 最终一致性：
+			所有的数据副本，在一段时间的同步之后，最终能够达到一致，而不是实时一致
+	
+	CAP理论是指 分布式系统中，一致性，可用性，分区容错性不可能三角，要么CP，要么AP
+		Consistency 一致性
+		Availability 可用性
+		Tolerance of network Partition 分区容错性
+			网络故障时，系统仍能继续工作
+	
+		CP：一致性优先，牺牲可用性来确保一致性
+	
+		AP：可用性有限，允许短暂的不一致存在，但是通过最终一致性确保一致。
 
+SpringCloud：接口的幂等性
+	唯一请求ID + redis （Controller接口幂等）
 
+	如何设计接口的幂等性：
+		对于分布式微服务的架构，首先要名且在哪一层解决幂等性
+	
+		展示层 --- 接入层（网关，认证中心） --- 业务层 -- 数据访问层 --- 数据层
+					   日   志   系   统   与   监   控   系   统
+	
+		前端可以进行防抖操作，以及适当的拦截。
+	
+		对于数据的查询操作，利用布隆过滤，缓存响应结果，redis缓存，优化数据库等方式提高效率。幂等性要求不高，
+	
+		业务层针对每个特定的微服务所面临的请求类型与数量，制定相应的幂等性策略。
+			例如 用户中心，商品中心，订单中心，消息中心，通知系统，积分系统等等
+		重点关注的是对于数据的 修改 操作，也就是数据访问层的调用要保持幂等。
+			
+	解决方案：
+		插入mysql的操作，可以使用唯一性限制，唯一索引，插入重复的数据会报错。
+	
+		Token（全局唯一请求ID） + redis缓存
+			前端携带token或者唯一请求ID，或者后端生成绑定此次请求对象。将请求ID进行缓存。
+			之后处理请求，根据业务需求缓存该次请求的响应结果json，
+				如果处理成功，就打标记该ID已处理完成，redis设置过期时间
+				短时间内的相同请求ID过来，不予处理，或者返回上次请求的结果
+				
+			确保前端发送相同请求会携带相同的请求ID，如果期间没有其他修改操作，可以直接返回缓存中的结果
+				如果就清空上次缓存
 
+SpringCloud：分布式事务 ---- 看多少个数据源连接池
+	redis redission 实现分布式锁
 
+	redis的lua脚本保证多个redis操作原子性
+	
+	方案：2PC、3PC、TCC、本地消息异步确认、可靠消息最终一致性、
+	
+	解决框架：Seata（实现了增强版2PC，TCC）、RabbitMQ（半消息+超时检查）
+	
+	事务是保证对数据库进行多个读写操作的一致性。
+		推荐尽量避免，会带来系统的复杂性与效率低下。
+	
+	分布式事务是要保证多个计算节点（多个链接）对于多个数据节点（多个库）的操作的原子性，要明确所保护的粒度。
+	
+	本地事务，仅支持单库事务。
+	
+	Spring的事务管理只能管理单个数据源链接池的情况
+	
+	重点就是同时有几个数据源链接池
 
+SpringCloud：分布式系统的限流
+	Gateway 路由断言工厂  限流熔断降级
 
-
-
-
-
+	redis计数器实现限流、令牌桶限流算法
+	
+	计数器：每次请求计数+1，计数器值大于60并且与第一次请求在1s内，就拒绝，达成1s 60次的请求限流。但是要每秒重置计数器。
+	
+	令牌桶算法：redis维护一个桶，桶内令牌的增加速度一定，请求过来持有令牌才可以进行下一步去处理（令牌可以是全局唯一ID绑定请求）
+		没有拿到令牌的在外面一个队列等待。队列满了抛弃请求返回繁忙。--429 TooManyRequests
+	
+	Nginx限流：
+		配置 ngx_http_limit_req_module 模块
+		nginx.conf
+			limit_req_zone $binary_remote_addr zone = prip:10m rate=1r/s;
+			limit_req_zone $server_name zone = perserver:10m rate=2r/s;
+	
+	OpenResty限流（Nginx扩展版 可以使用Lua脚本实现限流逻辑编写）
+	
+	Sentinel限流 管理后台配置？？？？？？
+	
+	Redis+Lua脚本限流 配合AOP实现，拦截请求，
+	
+	SpringCloudGateway限流  RateLimiter Filter ---- Bucket4j
